# AutoVoiceCollation

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  API_USAGE.md  CLAUDE.md  Dockerfile  Dockerfile.cpu  Dockerfile.proxy  LICENSE  README.md  api.py  config.py  docker-compose.yml  gui_app.py  index.js  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  ruff.toml  tailwind.config.js  webui.py
assets/: loading.css  loading.html
docs/: API_USAGE.md  DEVELOPER_GUIDE.md  DEV_SUGGESTION.md  DOCKER.md  DOCKER_CRASH_TROUBLESHOOTING.md  DOCKER_FONT_FIX.md  DOCKER_NETWORK_FIX.md  DOCKER_NETWORK_TROUBLESHOOTING.md  DOCKER_NETWORK_WINDOWS.md  DOCKER_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LOGGING.md  MIGRATION_FROM_ELECTRON.md  PROCESS_HISTORY_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SWITCH_MIRROR.md  WEBUI_HISTORY_INTEGRATION.py
frontend/: README.md
gui/: api_client.py  main_window.py
scripts/: add-firewall-rule.bat  clear_output.py  diagnose-network.bat  docker-start.bat  docker-start.sh  importtime.ps1  lint.bat  lint.sh  restart-after-migration.bat  restart-after-migration.sh  restart-docker-fix.bat  test-mirrors.bat  test-mirrors.sh  verify-font.sh
src/: Timer.py  __init__.py  bilibili_downloader.py  config.py  core_process.py  core_process_utils.py  device_manager.py  extract_audio_text.py  get_audio.py  get_timestamp.py  get_video_or_audio.py  load_api_key.py  logger.py  main.py  output_file_manager.py  process_history.py  (+4 more)
(+142 files in other folders)
